# model_based_shared_control

./: .gitignore  LICENSE  README.md
src/gym/: CMakeLists.txt  package.xml  setup.py
src/gym/gym/envs/: __init__.py
src/gym/gym/envs/box2d/: __init__.py  car_racing_augmented.py  lunar_lander.py  lunar_lander_multi_fire.py
src/gym/gym/scoreboard/: __init__.py
src/model_based_shared_control/: CMakeLists.txt  config.yaml  package.xml
src/model_based_shared_control/data/models/: README.txt
src/model_based_shared_control/launch/: collect_data.launch  model_based_shared_control.launch  online_model_based_shared_control.launch  user_only_control.launch
src/model_based_shared_control/msg/: Control.msg  State.msg
src/model_based_shared_control/scripts/: collect_data_script.py  model_based_shared_control_script.py  online_model_based_shared_control_script.py
src/model_based_shared_control/src/: collect_data.cpp  model_based_shared_control.cpp  online_model_based_shared_control.cpp
src/model_based_shared_control/src/robotlib/: lqr_controller.hpp  robot.hpp
src/model_based_shared_control/src/robotlib/dSAClib/: SAC.hpp  objective.hpp  wrap2Pi.hpp
src/model_based_shared_control/src/robotlib/dynamicalSystems/: system.hpp
src/model_based_shared_control/src/robotlib/dynamicalSystems/koopman/: koopman_operator.hpp
src/model_based_shared_control/src/robotlib/dynamicalSystems/koopman/basis_functions/: basis_template.hpp  linear_basis.hpp  nonlinear_basis.hpp
